--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="author" content="Deborah Detchon">
     <meta name="description" content="UX UI Design Portfolio Product Web App Designer">
-    <title>Deborah Detchon UX/UI Designer Boulder</title>
+    <title>Deborah Detchon UX/UI Designer Boulder CO</title>
     
     <link rel="icon" type="image/png" href="/my-favicon/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="/my-favicon/favicon.svg" />
