Read more hyperlink changed destination
Connecting the home page to project page by adding the link to the "read more" text

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         this project, I designed the brand identity and an e-commerce responsive web app where customers
                         can easily and intuitively browse and purchase goods from the online store.
                     </p><!-- end paragraph -->
-                    <a href="">Read more</a><!-- button or link label -->
+                    <a href="sincere-tea.html">Read more</a><!-- button or link label -->
                 </div><!-- end second column -->
             </div><!-- end row that holds (2) columns for project -->
             <div id="Dusen Dusen Memory Game"><!-- open row that holds (2) columns for project -->
