--- a/sincere-tea.html
+++ b/sincere-tea.html
@@ -13,6 +13,8 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/my-favicon/apple-touch-icon.png" />
     <meta name="apple-mobile-web-app-title" content="d.detchon" />
     <link rel="manifest" href="/my-favicon/site.webmanifest" />
+
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
