--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/my-favicon/apple-touch-icon.png" />
     <meta name="apple-mobile-web-app-title" content="d.detchon" />
     <link rel="manifest" href="/my-favicon/site.webmanifest" />
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
