--- a/sincere-tea.html
+++ b/sincere-tea.html
@@ -14,6 +14,7 @@
     <meta name="apple-mobile-web-app-title" content="d.detchon" />
     <link rel="manifest" href="/my-favicon/site.webmanifest" />
 
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
