--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
     <meta name="apple-mobile-web-app-title" content="d.detchon" />
     <link rel="manifest" href="/my-favicon/site.webmanifest" />
 
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+      
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    
 </head>
 
 <body>
