add and style buttons

--- a/about.html
+++ b/about.html
@@ -113,7 +113,7 @@
         <p>
             Call me: <a href="tel:(720) 340-2192‬">(720) 340-2192‬</a> |
             Skype me: <a href="skype:hello.careerfoundry">hello.careerfoundry</a> |
-            Email me: <a href="mailto:office@careerfoundry.com">Email me</a>
+            Email me: <a href="mailto:office@careerfoundry.com" class="button contact">SAY HELLO</a>
         </p>
         <div>
             <!--Social Media Layout and Placeholders-->
