--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         this project, I designed the brand identity and an e-commerce responsive web app where customers
                         can easily and intuitively browse and purchase goods from the online store.
                     </p><!-- end paragraph -->
-                    <a href="sincere-tea.html">Read more</a><!-- button or link label -->
+                    <a href="sincere-tea.html" class="button">Read more</a><!-- button or link label -->
                 </div><!-- end second column -->
             </div><!-- end row that holds (2) columns for project -->
             <div id="Dusen Dusen Memory Game"><!-- open row that holds (2) columns for project -->
@@ -86,7 +86,7 @@
                         Dusen Dusen home goods brand. This was a student project based on a
                         brief requiring a native app design for both iOS and Android.
                     </p><!-- end paragraph -->
-                    <a href="">Read more</a><!-- button or link label -->
+                    <a href="sincere-tea.html" class="button">Read more</a><!-- button or link label -->
                 </div><!-- end second column -->
             </div><!-- end row that holds (2) columns for project -->
             <div id="Home Cooking"><!-- open row that holds (2) columns for project -->
@@ -108,7 +108,7 @@
                         completed this project from start to finish involving a thorough UX phase
                         and UI branding and application phase.
                     </p><!-- end paragraph -->
-                    <a href="">Read more</a><!-- button or link label -->
+                    <a href="sincere-tea.html" class="button">Read more</a><!-- button or link label -->
                 </div><!-- end second column -->
             </div><!-- end row that holds (2) columns for project -->
             <div id="Buttery Notes"><!-- open row that holds (2) columns for project -->
@@ -129,7 +129,7 @@
                         responsive web app where customers can easily and intuitively browse
                         and purchase goods from the online store.
                     </p><!-- end paragraph -->
-                    <a href="">Read more</a><!-- button or link label -->
+                    <a href="sincere-tea.html" class="button">Read more</a><!-- button or link label -->
                 </div><!-- end second column -->
             </div><!-- end row that holds (2) columns for project -->
             <div id="Boulder Zen Center"><!-- open row that holds (2) columns for project -->
@@ -150,7 +150,7 @@
                         On this project, I created a style guide that captures the structure and warmth of an
                         intentional meditation community
                     </p><!-- end paragraph -->
-                    <a href="">Read more</a><!-- button or link label -->
+                    <a href="sincere-tea.html" class="button">Read more</a><!-- button or link label -->
                 </div><!-- end second column -->
             </div><!-- end row that holds (2) columns for project -->
         </div>
@@ -160,7 +160,7 @@
         <p>
             Call me: <a href="tel:(720) 340-2192‬">(720) 340-2192‬</a> |
             Skype me: <a href="skype:hello.careerfoundry">hello.careerfoundry</a> |
-            Email me: <a href="mailto:office@careerfoundry.com">Email me</a>
+            Email me: <a href="mailto:office@careerfoundry.com" class="button contact">SAY HELLO</a>
         </p>
         <div>
             <!--Social Media Layout and Placeholders-->
