--- a/sincere-tea.html
+++ b/sincere-tea.html
@@ -19,7 +19,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
@@ -147,12 +147,12 @@
      </div>
      
     </main>
-    <footer>
+<footer>
         <h2>Get in Touch</h2>
         <p>
             Call me: <a href="tel:(720) 340-2192‬">(720) 340-2192‬</a> |
             Skype me: <a href="skype:hello.careerfoundry">hello.careerfoundry</a> |
-            Email me: <a href="mailto:office@careerfoundry.com">Email me</a>
+            Email me: <a href="mailto:office@careerfoundry.com" class="button contact">SAY HELLO</a>
         </p>
         <div>
             <!--Social Media Layout and Placeholders-->
