style buttons and states and add section ids

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
     </header>
     <main>
-        <div>
+        <div id="hero">
             <h1>Hi, I’m Deborah. Thanks for checking out my work!</h1>
             <h2>To me, design is all about relationships.</h2>
             <p> My passion is to discover insights about the user experience and bring human sensitivity and a
@@ -48,7 +48,7 @@
 
 
             <div><!-- open row that holds (2) columns for project -->
-                <div> <!-- open first column (used for image) -->
+                <div id="work"> <!-- open first column (used for image) -->
                     <h2>Projects</h2>
                     <picture>
                         <source srcset="img/sincere-tea/sincere-tea-thumbnail.png" media="(max-width:767px)">
@@ -156,6 +156,7 @@
         </div>
     </main>
     <footer>
+    <div id="contact">
         <h2>Get in Touch</h2>
         <p>
             Call me: <a href="tel:(720) 340-2192‬">(720) 340-2192‬</a> |
@@ -180,6 +181,7 @@
         <div>
             <p>Copyright DEBORAH-DETCHON 2025</p>
         </div>
+    </div>
     </footer>
 </body>
 
