style header and add containers and padding

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 
 <body>
     <header>
-        <div>
+        <div class="container">
             <img src="img/d.detchon.svg" alt="d.detchon logo" />
             <nav>
-                <ul>
+                <ul class="navigation">
                     <li><a href="index.html">Work</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="#contact">Contact</a></li>
@@ -41,145 +41,147 @@
     </header>
     <main>
         <div id="hero">
-            <h1>Hi, I’m Deborah. Thanks for checking out my work!</h1>
-            <h2>To me, design is all about relationships.</h2>
-            <p> My passion is to discover insights about the user experience and bring human sensitivity and a
-                discerning eye to digital products.</p>
-
-
-            <div><!-- open row that holds (2) columns for project -->
-                <div id="work"> <!-- open first column (used for image) -->
-                    <h2>Projects</h2>
-                    <picture>
-                        <source srcset="img/sincere-tea/sincere-tea-thumbnail.png" media="(max-width:767px)">
-                        <img src="img/sincere-tea/sincere-tea-thumbnail.png" alt="sincere tea project thumbnail">
-                    </picture>
-                </div><!-- end first column -->
-                <div><!-- open second column (used for text) -->
-                    <h3>Sincere Tea</h3>
-                    <p><!-- open paragraph -->
-                        <i>An intuitive storefront with a refined brand identity.</i>
-                    </p><!-- end paragraph -->
-                    <p><!-- open paragraph -->
-                        Sincere Tea is an online store offering unique handcrafted tea wares. As the UX/UI designer for
-                        this project, I designed the brand identity and an e-commerce responsive web app where customers
-                        can easily and intuitively browse and purchase goods from the online store.
-                    </p><!-- end paragraph -->
-                    <a href="sincere-tea.html" class="button">Read more</a><!-- button or link label -->
-                </div><!-- end second column -->
-            </div><!-- end row that holds (2) columns for project -->
-            <div id="Dusen Dusen Memory Game"><!-- open row that holds (2) columns for project -->
-                <div> <!-- open first column (used for image) -->
-                    <picture>
-                        <source srcset="img/dusen-dusen/dusen-dusen-thumbnail.png" media="(max-width:767px)">
-                        <img src="img/dusen-dusen/dusen-dusen-thumbnail.png"
-                            alt="Dusen Dusen Memory Game project thumbnail">
-                    </picture>
-                </div><!-- end first column -->
-                <div><!-- open second column (used for text) -->
-                    <h3>Dusen Dusen Memory Game</h3>
-                    <p><!-- open paragraph -->
-                        <i>Play with the patterns you love.</i>
-                    </p><!-- end paragraph -->
-                    <p><!-- open paragraph -->
-                        I designed a brain-teasing memory game app in the awesome style of
-                        Dusen Dusen home goods brand. This was a student project based on a
-                        brief requiring a native app design for both iOS and Android.
-                    </p><!-- end paragraph -->
-                    <a href="sincere-tea.html" class="button">Read more</a><!-- button or link label -->
-                </div><!-- end second column -->
-            </div><!-- end row that holds (2) columns for project -->
-            <div id="Home Cooking"><!-- open row that holds (2) columns for project -->
-                <div> <!-- open first column (used for image) -->
-                    <picture>
-                        <source srcset="img/home-cooking/home-cooking-thumbnail.png" media="(max-width:767px)">
-                        <img src="img/home-cooking/home-cooking-thumbnail.png" alt="Home Cooking project thumbnail">
-                    </picture>
-                </div><!-- end first column -->
-                <div><!-- open second column (used for text) -->
-                    <h3>Home Cooking</h3>
-                    <p><!-- open paragraph -->
-                        <i>Not sure what to make for dinner tonight? This will help.</i>
-                    </p><!-- end paragraph -->
-                    <p><!-- open paragraph -->
-                        Home Cooking is a source for recipes that inspire dinner at home. In this
-                        project, I designed a responsive web app that helps cook solve the
-                        everyday problem of what to cook for dinner. As the UX/UI designer, I
-                        completed this project from start to finish involving a thorough UX phase
-                        and UI branding and application phase.
-                    </p><!-- end paragraph -->
-                    <a href="sincere-tea.html" class="button">Read more</a><!-- button or link label -->
-                </div><!-- end second column -->
-            </div><!-- end row that holds (2) columns for project -->
-            <div id="Buttery Notes"><!-- open row that holds (2) columns for project -->
-                <div> <!-- open first column (used for image) -->
-                    <picture>
-                        <source srcset="img/buttery-notes/buttery-notes-thumbnail.png" media="(max-width:767px)">
-                        <img src="img/buttery-notes/buttery-notes-thumbnail.png" alt="Buttery Notes project thumbnail">
-                    </picture>
-                </div><!-- end first column -->
-                <div><!-- open second column (used for text) -->
-                    <h3>Buttery Notes</h3>
-                    <p><!-- open paragraph -->
-                        <i>makes note-taking so…buttery.</i>
-                    </p><!-- end paragraph -->
-                    <p><!-- open paragraph -->
-                        Enter a digital feel that is fun, tidy, and satisfying. As the UX/UI designer
-                        for this project, I designed the brand identity and an e-commerce
-                        responsive web app where customers can easily and intuitively browse
-                        and purchase goods from the online store.
-                    </p><!-- end paragraph -->
-                    <a href="sincere-tea.html" class="button">Read more</a><!-- button or link label -->
-                </div><!-- end second column -->
-            </div><!-- end row that holds (2) columns for project -->
-            <div id="Boulder Zen Center"><!-- open row that holds (2) columns for project -->
-                <div> <!-- open first column (used for image) -->
-                    <picture>
-                        <source srcset="img/boulder-zen-center/boulder-zen-center-thumbnail.png"
-                            media="(max-width:767px)">
-                        <img src="img/boulder-zen-center/boulder-zen-center-thumbnail.png"
-                            alt="Boulder Zen Center project thumbnail">
-                    </picture>
-                </div><!-- end first column -->
-                <div><!-- open second column (used for text) -->
-                    <h3>Boulder Zen Center</h3>
-                    <p><!-- open paragraph -->
-                        <i>A Beautiful and Clear Guide to Brand Implementation</i>
-                    </p><!-- end paragraph -->
-                    <p><!-- open paragraph -->
-                        On this project, I created a style guide that captures the structure and warmth of an
-                        intentional meditation community
-                    </p><!-- end paragraph -->
-                    <a href="sincere-tea.html" class="button">Read more</a><!-- button or link label -->
-                </div><!-- end second column -->
-            </div><!-- end row that holds (2) columns for project -->
+            <div class="container">
+                <h1>Hi, I’m Deborah. Thanks for checking out my work!</h1>
+                <h2>To me, design is all about relationships.</h2>
+                <p> My passion is to discover insights about the user experience and bring human sensitivity and a
+                    discerning eye to digital products.</p>
+                <div><!-- open row that holds (2) columns for project -->
+                    <div id="work"> <!-- open first column (used for image) -->
+                        <h2>Projects</h2>
+                        <picture>
+                            <source srcset="img/sincere-tea/sincere-tea-thumbnail.png" media="(max-width:767px)">
+                            <img src="img/sincere-tea/sincere-tea-thumbnail.png" alt="sincere tea project thumbnail">
+                        </picture>
+                    </div><!-- end first column -->
+                    <div><!-- open second column (used for text) -->
+                        <h3>Sincere Tea</h3>
+                        <p><!-- open paragraph -->
+                            <i>An intuitive storefront with a refined brand identity.</i>
+                        </p><!-- end paragraph -->
+                        <p><!-- open paragraph -->
+                            Sincere Tea is an online store offering unique handcrafted tea wares. As the UX/UI designer for
+                            this project, I designed the brand identity and an e-commerce responsive web app where customers
+                            can easily and intuitively browse and purchase goods from the online store.
+                        </p><!-- end paragraph -->
+                        <a href="sincere-tea.html" class="button">Read more</a><!-- button or link label -->
+                    </div><!-- end second column -->
+                </div><!-- end row that holds (2) columns for project -->
+                <div id="Dusen Dusen Memory Game"><!-- open row that holds (2) columns for project -->
+                    <div> <!-- open first column (used for image) -->
+                        <picture>
+                            <source srcset="img/dusen-dusen/dusen-dusen-thumbnail.png" media="(max-width:767px)">
+                            <img src="img/dusen-dusen/dusen-dusen-thumbnail.png"
+                                alt="Dusen Dusen Memory Game project thumbnail">
+                        </picture>
+                    </div><!-- end first column -->
+                    <div><!-- open second column (used for text) -->
+                        <h3>Dusen Dusen Memory Game</h3>
+                        <p><!-- open paragraph -->
+                            <i>Play with the patterns you love.</i>
+                        </p><!-- end paragraph -->
+                        <p><!-- open paragraph -->
+                            I designed a brain-teasing memory game app in the awesome style of
+                            Dusen Dusen home goods brand. This was a student project based on a
+                            brief requiring a native app design for both iOS and Android.
+                        </p><!-- end paragraph -->
+                        <a href="sincere-tea.html" class="button">Read more</a><!-- button or link label -->
+                    </div><!-- end second column -->
+                </div><!-- end row that holds (2) columns for project -->
+                <div id="Home Cooking"><!-- open row that holds (2) columns for project -->
+                    <div> <!-- open first column (used for image) -->
+                        <picture>
+                            <source srcset="img/home-cooking/home-cooking-thumbnail.png" media="(max-width:767px)">
+                            <img src="img/home-cooking/home-cooking-thumbnail.png" alt="Home Cooking project thumbnail">
+                        </picture>
+                    </div><!-- end first column -->
+                    <div><!-- open second column (used for text) -->
+                        <h3>Home Cooking</h3>
+                        <p><!-- open paragraph -->
+                            <i>Not sure what to make for dinner tonight? This will help.</i>
+                        </p><!-- end paragraph -->
+                        <p><!-- open paragraph -->
+                            Home Cooking is a source for recipes that inspire dinner at home. In this
+                            project, I designed a responsive web app that helps cook solve the
+                            everyday problem of what to cook for dinner. As the UX/UI designer, I
+                            completed this project from start to finish involving a thorough UX phase
+                            and UI branding and application phase.
+                        </p><!-- end paragraph -->
+                        <a href="sincere-tea.html" class="button">Read more</a><!-- button or link label -->
+                    </div><!-- end second column -->
+                </div><!-- end row that holds (2) columns for project -->
+                <div id="Buttery Notes"><!-- open row that holds (2) columns for project -->
+                    <div> <!-- open first column (used for image) -->
+                        <picture>
+                            <source srcset="img/buttery-notes/buttery-notes-thumbnail.png" media="(max-width:767px)">
+                            <img src="img/buttery-notes/buttery-notes-thumbnail.png" alt="Buttery Notes project thumbnail">
+                        </picture>
+                    </div><!-- end first column -->
+                    <div><!-- open second column (used for text) -->
+                        <h3>Buttery Notes</h3>
+                        <p><!-- open paragraph -->
+                            <i>makes note-taking so…buttery.</i>
+                        </p><!-- end paragraph -->
+                        <p><!-- open paragraph -->
+                            Enter a digital feel that is fun, tidy, and satisfying. As the UX/UI designer
+                            for this project, I designed the brand identity and an e-commerce
+                            responsive web app where customers can easily and intuitively browse
+                            and purchase goods from the online store.
+                        </p><!-- end paragraph -->
+                        <a href="sincere-tea.html" class="button">Read more</a><!-- button or link label -->
+                    </div><!-- end second column -->
+                </div><!-- end row that holds (2) columns for project -->
+                <div id="Boulder Zen Center"><!-- open row that holds (2) columns for project -->
+                    <div> <!-- open first column (used for image) -->
+                        <picture>
+                            <source srcset="img/boulder-zen-center/boulder-zen-center-thumbnail.png"
+                                media="(max-width:767px)">
+                            <img src="img/boulder-zen-center/boulder-zen-center-thumbnail.png"
+                                alt="Boulder Zen Center project thumbnail">
+                        </picture>
+                    </div><!-- end first column -->
+                    <div><!-- open second column (used for text) -->
+                        <h3>Boulder Zen Center</h3>
+                        <p><!-- open paragraph -->
+                            <i>A Beautiful and Clear Guide to Brand Implementation</i>
+                        </p><!-- end paragraph -->
+                        <p><!-- open paragraph -->
+                            On this project, I created a style guide that captures the structure and warmth of an
+                            intentional meditation community
+                        </p><!-- end paragraph -->
+                        <a href="sincere-tea.html" class="button">Read more</a><!-- button or link label -->
+                    </div><!-- end second column -->
+                </div><!-- end row that holds (2) columns for project -->
+            </div>
         </div>
     </main>
     <footer>
-    <div id="contact">
-        <h2>Get in Touch</h2>
-        <p>
-            Call me: <a href="tel:(720) 340-2192‬">(720) 340-2192‬</a> |
-            Skype me: <a href="skype:hello.careerfoundry">hello.careerfoundry</a> |
-            Email me: <a href="mailto:office@careerfoundry.com" class="button contact">SAY HELLO</a>
-        </p>
-        <div>
-            <!--Social Media Layout and Placeholders-->
-            <a href="https://www.linkedin.com/in/deborah-detchon" target="_blank">
-                <img src="img/linked-in_icon.svg" alt="linked-in_icon" />
-            </a>
-            <a href="https://www.behance.net/deborahdetchon1" target="_blank">
-                <img src="img/behance_icon.svg" alt="Behance-icon" />
-            </a>
-            <a href="https://github.com" target="_blank">
-                <img src="img/github_icon.svg" alt="Github icon" />
-            </a>
-            <a href="https://www.instagram.com/elephantclouds/">
-                <img src="img/instagram_icon.svg" alt="Instagram icon" />
-            </a>
-        </div>
-        <div>
-            <p>Copyright DEBORAH-DETCHON 2025</p>
+        <div id="contact">
+            <div class="container">
+                <h2>Get in Touch</h2>
+                <p>
+                    Call me: <a href="tel:(720) 340-2192‬">(720) 340-2192‬</a> |
+                    Skype me: <a href="skype:hello.careerfoundry">hello.careerfoundry</a> |
+                    Email me: <a href="mailto:office@careerfoundry.com" class="button contact">SAY HELLO</a>
+                </p>
+                <div>
+                    <!--Social Media Layout and Placeholders-->
+                    <a href="https://www.linkedin.com/in/deborah-detchon" target="_blank">
+                        <img src="img/linked-in_icon.svg" alt="linked-in_icon" />
+                    </a>
+                    <a href="https://www.behance.net/deborahdetchon1" target="_blank">
+                        <img src="img/behance_icon.svg" alt="Behance-icon" />
+                    </a>
+                    <a href="https://github.com" target="_blank">
+                        <img src="img/github_icon.svg" alt="Github icon" />
+                    </a>
+                    <a href="https://www.instagram.com/elephantclouds/">
+                        <img src="img/instagram_icon.svg" alt="Instagram icon" />
+                    </a>
+                </div>
+                <div>
+                    <p>Copyright DEBORAH-DETCHON 2025</p>
+                </div>
         </div>
     </div>
     </footer>
