adding row class and organizing div containers

--- a/index.html
+++ b/index.html
@@ -39,17 +39,22 @@
             </nav>
         </div>
     </header>
-    <main>
-        <div id="hero">
-            <div class="container">
-                <h1>Hi, I’m Deborah. Thanks for checking out my work!</h1>
-                <h2>To me, design is all about relationships.</h2>
-                <p> My passion is to discover insights about the user experience and bring human sensitivity and a
-                    discerning eye to digital products.</p>
-                <div><!-- open row that holds (2) columns for project -->
-                    <div id="work"> <!-- open first column (used for image) -->
-                        <h2>Projects</h2>
-                        <picture>
+    <main> <!-- Start of the main content -->
+
+        <div id="hero"> <!-- Hero Section -->
+          <div class="container"> <!-- Container for centering and max-width -->
+            <h1>Hi, I’m Deborah. Thanks for checking out my work!</h1>
+            <h2>To me, design is all about relationships.</h2>
+            <p>My passion is to discover insights about the user experience and bring human sensitivity and a discerning eye to digital products.</p>
+          </div> <!-- End of hero container -->
+        </div> <!-- End of hero section -->
+                            
+        <div id="work">
+            <div class="container"><!-- open first column (used for image) -->
+                <h2>Projects</h2>
+                <div class="row"><!-- open row that holds (2) columns for project -->
+                    <div>
+                        <picture> <!-- First Column: Image -->
                             <source srcset="img/sincere-tea/sincere-tea-thumbnail.png" media="(max-width:767px)">
                             <img src="img/sincere-tea/sincere-tea-thumbnail.png" alt="sincere tea project thumbnail">
                         </picture>
@@ -59,15 +64,14 @@
                         <p><!-- open paragraph -->
                             <i>An intuitive storefront with a refined brand identity.</i>
                         </p><!-- end paragraph -->
-                        <p><!-- open paragraph -->
-                            Sincere Tea is an online store offering unique handcrafted tea wares. As the UX/UI designer for
+                        <p>Sincere Tea is an online store offering unique handcrafted tea wares. As the UX/UI designer for
                             this project, I designed the brand identity and an e-commerce responsive web app where customers
-                            can easily and intuitively browse and purchase goods from the online store.
-                        </p><!-- end paragraph -->
+                            can easily and intuitively browse and purchase goods from the online store.</p>
                         <a href="sincere-tea.html" class="button">Read more</a><!-- button or link label -->
                     </div><!-- end second column -->
                 </div><!-- end row that holds (2) columns for project -->
-                <div id="Dusen Dusen Memory Game"><!-- open row that holds (2) columns for project -->
+
+                <div class="row"><!-- open row that holds (2) columns for project -->
                     <div> <!-- open first column (used for image) -->
                         <picture>
                             <source srcset="img/dusen-dusen/dusen-dusen-thumbnail.png" media="(max-width:767px)">
@@ -77,18 +81,15 @@
                     </div><!-- end first column -->
                     <div><!-- open second column (used for text) -->
                         <h3>Dusen Dusen Memory Game</h3>
-                        <p><!-- open paragraph -->
-                            <i>Play with the patterns you love.</i>
-                        </p><!-- end paragraph -->
-                        <p><!-- open paragraph -->
-                            I designed a brain-teasing memory game app in the awesome style of
+                        <p><i>Play with the patterns you love.</i></p>
+                        <p>I designed a brain-teasing memory game app in the awesome style of
                             Dusen Dusen home goods brand. This was a student project based on a
-                            brief requiring a native app design for both iOS and Android.
-                        </p><!-- end paragraph -->
+                            brief requiring a native app design for both iOS and Android.</p>
                         <a href="sincere-tea.html" class="button">Read more</a><!-- button or link label -->
                     </div><!-- end second column -->
                 </div><!-- end row that holds (2) columns for project -->
-                <div id="Home Cooking"><!-- open row that holds (2) columns for project -->
+
+                <div class="row"><!-- open row that holds (2) columns for project -->
                     <div> <!-- open first column (used for image) -->
                         <picture>
                             <source srcset="img/home-cooking/home-cooking-thumbnail.png" media="(max-width:767px)">
@@ -97,20 +98,17 @@
                     </div><!-- end first column -->
                     <div><!-- open second column (used for text) -->
                         <h3>Home Cooking</h3>
-                        <p><!-- open paragraph -->
-                            <i>Not sure what to make for dinner tonight? This will help.</i>
-                        </p><!-- end paragraph -->
-                        <p><!-- open paragraph -->
-                            Home Cooking is a source for recipes that inspire dinner at home. In this
+                        <p><i>Not sure what to make for dinner tonight? This will help.</i></p>
+                        <p>Home Cooking is a source for recipes that inspire dinner at home. In this
                             project, I designed a responsive web app that helps cook solve the
                             everyday problem of what to cook for dinner. As the UX/UI designer, I
                             completed this project from start to finish involving a thorough UX phase
-                            and UI branding and application phase.
-                        </p><!-- end paragraph -->
+                            and UI branding and application phase.</p>
                         <a href="sincere-tea.html" class="button">Read more</a><!-- button or link label -->
                     </div><!-- end second column -->
                 </div><!-- end row that holds (2) columns for project -->
-                <div id="Buttery Notes"><!-- open row that holds (2) columns for project -->
+
+                <div class="row"><!-- open row that holds (2) columns for project -->
                     <div> <!-- open first column (used for image) -->
                         <picture>
                             <source srcset="img/buttery-notes/buttery-notes-thumbnail.png" media="(max-width:767px)">
@@ -119,19 +117,16 @@
                     </div><!-- end first column -->
                     <div><!-- open second column (used for text) -->
                         <h3>Buttery Notes</h3>
-                        <p><!-- open paragraph -->
-                            <i>makes note-taking so…buttery.</i>
-                        </p><!-- end paragraph -->
-                        <p><!-- open paragraph -->
-                            Enter a digital feel that is fun, tidy, and satisfying. As the UX/UI designer
+                        <p><i>makes note-taking so…buttery.</i></p>
+                        <p>Enter a digital feel that is fun, tidy, and satisfying. As the UX/UI designer
                             for this project, I designed the brand identity and an e-commerce
                             responsive web app where customers can easily and intuitively browse
-                            and purchase goods from the online store.
-                        </p><!-- end paragraph -->
+                            and purchase goods from the online store.</p>
                         <a href="sincere-tea.html" class="button">Read more</a><!-- button or link label -->
                     </div><!-- end second column -->
                 </div><!-- end row that holds (2) columns for project -->
-                <div id="Boulder Zen Center"><!-- open row that holds (2) columns for project -->
+
+                <div class="row"><!-- open row that holds (2) columns for project -->
                     <div> <!-- open first column (used for image) -->
                         <picture>
                             <source srcset="img/boulder-zen-center/boulder-zen-center-thumbnail.png"
@@ -142,18 +137,15 @@
                     </div><!-- end first column -->
                     <div><!-- open second column (used for text) -->
                         <h3>Boulder Zen Center</h3>
-                        <p><!-- open paragraph -->
-                            <i>A Beautiful and Clear Guide to Brand Implementation</i>
-                        </p><!-- end paragraph -->
-                        <p><!-- open paragraph -->
-                            On this project, I created a style guide that captures the structure and warmth of an
-                            intentional meditation community
-                        </p><!-- end paragraph -->
+                        <p><i>A Beautiful and Clear Guide to Brand Implementation</i></p>
+                        <p>On this project, I created a style guide that captures the structure and warmth of an
+                            intentional meditation community</p>
                         <a href="sincere-tea.html" class="button">Read more</a><!-- button or link label -->
                     </div><!-- end second column -->
                 </div><!-- end row that holds (2) columns for project -->
-            </div>
-        </div>
+    
+            </div> <!-- End of work container -->
+        </div> <!-- End of work section -->
     </main>
     <footer>
         <div id="contact">
