--- a/sincere-tea.html
+++ b/sincere-tea.html
@@ -29,7 +29,7 @@
 <body>
     <header>
         <div>
-            <img src="img/d.detchon.svg" alt="d.detchon logo" />
+            <img class="logo" src="img/d.detchon.svg" alt="d.detchon logo" />
             <nav>
                 <ul>
                     <li><a href="index.html">Work</a></li>
