improve hero section text hierarchy

--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@
         <div id="hero"> <!-- Hero Section -->
           <div class="container"> <!-- Container for centering and max-width -->
             <h1>Hi, I’m Deborah. Thanks for checking out my work!</h1>
-            <h2>To me, design is all about relationships.</h2>
-            <p>My passion is to discover insights about the user experience and bring human sensitivity and a discerning eye to digital products.</p>
+            <span><h3>To me, design is all about relationships.</h3>
+            <p>My passion is to discover insights about the user experience and bring human sensitivity 
+                and a discerning eye to digital products.</p></span>
           </div> <!-- End of hero container -->
         </div> <!-- End of hero section -->
                             
